--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "accelerate",
     "tqdm",
     "einops",
+    "tensorboard>=2.20.0",
 ]
 
 [tool.uv.sources]
@@ -27,12 +28,12 @@ torchvision = { index = "torch-gpu" }
 
 [[tool.uv.index]]
 name = "torch-gpu"
-url = "https://download.pytorch.org/whl/cu130"
+url = "https://download.pytorch.org/whl/cu128"
 explicit = true
 
 # Development tooling (installed in the dev environment only)
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pre-commit",
     "ruff",
     "black",
