--- a/config.toml
+++ b/config.toml
@@ -5,13 +5,13 @@ condition_type = "t_r"  # Options: t_r, t_delta_t
 
 input_size = 32
 batch_size = 64
-n_epochs = 100  # Number of epochs to train
+n_epochs = 80  # Number of epochs to train
 num_workers = 0
 
 learning_rate = 0.0001
 weight_decay = 0.00
 
-gamma = 0.0
+gamma = 0.0 # p = 1 - gamma
 c = 0.001
 sample_ratio = 0.25
 sampler_type = "lognorm"
