--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              device_ids: ['6', '7']
+              device_ids: ['4', '5', '6', '7']
               capabilities: [gpu]
 
     # Volumes for persistence
